# ktmuscrap

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README-RU.md  README.md
.github/workflows/: rust.yml
doc/en/: api.md  configuring.md  running.md  tour.md
doc/en/object/: attender.md  compare.md  day.md  formation.md  notify.md  page.md  subject.md  updates.md
doc/en/response/: page.md  updates.md
doc/ru/: api.md  configuring.md  running.md  tour.md
doc/ru/object/: attender.md  compare.md  day.md  formation.md  notify.md  page.md  subject.md  updates.md
doc/ru/response/: page.md  updates.md
src/: README.md  debug.rs  error.rs  fs.rs  lifetime.rs  logger.rs  main.rs  string.rs
src/api/: README.md  compare.rs  convert.rs  error.rs  mod.rs  regex.rs
src/api/error/: base.rs  mod.rs
src/api/load/: mod.rs  regex.rs  schedule.rs
src/api/schedule/: daily.rs  groups.rs  mod.rs  tchr_daily.rs  tchr_weekly.rs  teachers.rs  weekly.rs
src/api/schedule/raw/: ft_daily.rs  ft_weekly.rs  mod.rs  r_weekly.rs  tchr_ft_daily.rs  tchr_ft_weekly.rs  tchr_r_weekly.rs
src/compare/: mod.rs  schedule.rs
src/data/: README.md  container.rs  json.rs  mod.rs  regex.rs  schedule.rs  weekday.rs
src/data/container/: mod.rs  schedule.rs  settings.rs
src/data/css/: mod.rs  props.rs  query.rs
src/data/schedule/: attender.rs  debug.rs  error.rs  file.rs  interactor.rs  last.rs  mod.rs  notify.rs  raw.rs  temp.rs  update.rs  weekday.rs
src/data/schedule/fulltime/: html.rs  mod.rs  table.rs
src/data/schedule/raw/: container.rs  error.rs  ignored.rs  index.rs  last.rs  mod.rs  table.rs  zip.rs
src/data/schedule/raw/fulltime/: html.rs  mod.rs  table.rs
src/data/schedule/raw/remote/: html.rs  index.rs  mod.rs  table.rs
src/data/schedule/remote/: html.rs  mod.rs  table.rs
src/data/weekday/: mod.rs  short.rs
src/merge/: daily.rs  error.rs  mod.rs  weekly.rs
src/parse/: README.md  attender.rs  cabinet.rs  css.rs  date.rs  error.rs  group.rs  mod.rs  node.rs  num.rs  subject.rs  teacher.rs  time.rs
src/parse/css/: mod.rs  tests.rs
src/parse/fulltime/: error.rs  html.rs  mappings.rs  mod.rs  tables.rs
src/parse/group/: mod.rs  tests.rs
src/parse/remote/: html.rs  mapping.rs  mod.rs  table.rs
src/parse/sheet/: README.md  html.rs  mappings.rs  mod.rs  table.rs
src/parse/subject/: mod.rs  tests.rs
src/parse/teacher/: mod.rs  tests.rs
src/types/: schedule.rs
tools/: ws.py
