[package]
name = "ktmuscrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
actix-web = "4"

log = "0.4"
colored = "2"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"]}
zip = "0.6.3"
num-traits = "0.2"
num-derive = "0.3"
serde = "1.0.147"
serde_derive = "1.0.147"
strum = "0.24"
strum_macros = "0.24"
itertools = "0.10.5"
html_parser = "0.6.3"
regex = "1.5"
ngrammatic = "0.3.4"