[package]
name = "ktmuscrap"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# runtime
async-stream = "0.3.3"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = "0.7.11"
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.1"
reqwest = "0.12"

# logging, coloring
log = "0.4"
colored = "2"

# date, time
chrono = { version = "0.4.38", features = ["serde"]}

# serializing, deserializing
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"

# enum
strum = "0.24"
strum_macros = "0.24"
num-traits = "0.2"
num-derive = "0.3"

# html
html_parser = "0.6.3"
htmlescape = "0.3.1"

# css
cssparser = "0.34.0"

# strings
regex = "1.5"
strsim = "0.11.1"

# tools
thiserror = "1.0"
derive-new = "0.5"
derivative = "2.2.0"
itertools = "0.10.5"
async_zip = { version = "0.0.17", features = ["full"] }
rand = "0.8"
sanitize-filename = "0.5.0"
bytes = "1"

